Enable preview language features